# length_expirement

./: .gitignore  COMPLETE_EXPERIMENT_README.md  EASY_SERVER_SETUP.md  EXPERIMENT_README.md  INSTALLATION_GUIDE.md  MULTI_TEMPERATURE_README.md  PUBLICATION_PLOTS_README.md  README.md  SERVER_DEPLOYMENT_GUIDE.md  TEXT_EXPERIMENT_README.md  comprehensive_analysis.py  convert_text_to_activations.py  correct_expirement_lengths.py  experiment_corrected.py  experiment_final.py  experiment_final_correct.py  experiment_macbook_optimized.py  experiment_multi_temperature.py  experiment_simple.py  experiment_subthought_length.py  experiment_subthought_length_text.py  experiment_working.py  generate_activations.py  generate_publication_plots.py  plot_activations.py  plot_activations_comparison.py  plot_activations_correlation.py  plot_activations_interactive.py  plot_dynamics.py  plot_prob_correct.py  plot_prob_decision_token.py  plot_prob_decision_token_continuation.py  plot_solution_mi_interactive.py  publication_plots.py  pyproject.toml  requirements.txt  run_4_test_experiments.sh  run_complete_experiment.sh  run_experiments_scale.sh  run_final_experiment.sh  (+14 more)
analysis/: activations_analysis.py  mi_analysis.py  mi_analysis_optimized.py  plotting_utils.py  token_analysis.py
configs/: qwen-instruct.yaml
corrected_results/: corrected_results_math.json
decision_frequency_debug_results/: decision_token_frequency_results.json
decision_frequency_test_results/: decision_token_frequency_results.json
final_results/: final_results_math.json
scripts/: plot_comparison.sh
(+17 files in other folders)
